css/styles.css
body{
    font-family: Helvetica, Arial, Sans-Serif;
    overflow-x: hidden;
}
a{
    color: inherit;
    text-decoration: none;
}
html, body {
    width:100%;
    height:100%;
    margin:0;
    padding:0;
}

div#header {
    font-size:18px;
    color: #303030;
    position: fixed;
    top:0;
    right:0;
    bottom:0;
    left:0;
    min-width: 100%;
    height: 40px;
    background: #F0F0F0;
    border-bottom: 1px solid #B0B0B0;
    z-index: 1;
}
#header:after{
    clear:both;
}
.vcenter {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}
div#logo {
    float: left;
    margin-left: 10px;
}
div#nav {
    float: right;
    margin-right: 10px;
}
div#image {
    text-align:center;
    display:inline-block;
    background-size: cover;
    background-image:url('../img/back.jpg');
    width: 100%;
    position:fixed !important;
    position:absolute;
    top:0;
    right:0;
    bottom:0;
    left:0;
    z-index: -1;
}
#welcome {
    text-align:center;
    font-size:72px;
    color:#F0F0F0;
}
@media screen and (max-width: 800px) and (min-width: 500px){
    #welcome{
        margin: 175px 50px 75px 50px;
    }
}
@media screen and (min-width: 800px) {
    #welcome{
        margin: 275px 100px 100px 100px;
    }
}
@media screen and (max-width: 500px) {
    #welcome{
        margin: 125px 30px 50px 30px;
        font-size:36px;
    }
}
div#btn{
    display:inline-block;
}
.btn {
    background: #3498db;
    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
    background-image: -o-linear-gradient(top, #3498db, #2980b9);
    background-image: linear-gradient(to bottom, #3498db, #2980b9);
    -webkit-border-radius: 6;
    -moz-border-radius: 6;
    border-radius: 6px;
    font-family: Arial;
    color: #ffffff;
    font-size: 20px;
    padding: 10px 20px 10px 20px;
    text-decoration: none;
}
.btn:hover {
    background: #3cb0fd;
    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
    text-decoration: none;
}
div#body {
    width: 100%;
    margin-top: 60%;
}
div.section1 {
    width: 100%;
    border-top: 1px solid #B0B0B0;
    border-bottom: 1px solid #C0C0C0;
    background: #CCCCCC;
    height: 550px;
}
div.section2 {
    background: #F0F0F0;
    height: 550px;
}
div#footer {
    color:#101010;
    position: relative;
    background: #F0F0F0;
    border-top: 1px solid #C0C0C0;
    border-bottom: 1px solid #B0B0B0;
    background: #CCCCCC;
    height: 300px;
}
div.section{
    float: left;
}
div.bubble {
    text-align: center;
    border-radius: 100px;
    width: 200px;
    height: 200px;
    background: #F0F0F0;
    border: 1px solid #B0B0B0;
    margin-left: 100px;
    margin-top: 80px;
}
p.bubble{
  font-size: 20px;
}
div.half {
  height: 100%;
  margin: 0px auto;
  width: 1005px;
}
.mid {
  padding-top:200px;
  transform: translateY(-50%);
}
.red {
  color:red;
}
#last {
  position: absolute;
  bottom:12px;
  width: 100%;
  text-align: center;
}

